--- a/clock/css/style.css
+++ b/clock/css/style.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  background-image: url("https://images.unsplash.com/photo-1633187402446-6658615d7ab5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1935&q=80");
+  background-color: black;
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
@@ -22,12 +22,20 @@ body {
   align-items: center;
 
   min-height: 100vh;
+
+  padding: 1rem;
+}
+
+header {
+  padding: 1rem;
+  background: black;
+  color: white;
 }
 
 main {
-  --s: clamp(12rem, 35vw, 55rem);
+  --s: clamp(12rem, 30vw, 55rem);
   
-  margin: 0.5rem;
+  margin: 2rem 0.5rem;
 
   width: var(--s);
   height: var(--s);
@@ -35,11 +43,11 @@ main {
   border: clamp(0.25rem, 3vw, 1rem) solid white;
   border-radius: 50%;
 
-  backdrop-filter: blur(1rem);
+  backdrop-filter: blur(0.25rem);
 
   position: relative;
 
-  box-shadow: inset 0 0 3rem clamp(0.25rem, 5vw, 2rem) black;
+  box-shadow: inset 0 0 15rem 1rem black;
 }
 
 main::after {
@@ -101,4 +109,8 @@ footer {
 
 .no-transition {
   transition: none;
+}
+
+#artist {
+  color: lightblue;
 }
